# dspark-edge

./: .gitignore  CMakeLists.txt  HANDOFF.md  PLAN.md  README.md  baseline.md  handoff.md  justfile
docs/media/: render_dataflow.py
models/: README.md
patches/: gemma_dspark_llamacpp.patch  qnx_llamacpp.patch
proto/: dspark.proto
scripts/: apply_gemma_dspark.sh  build.sh  init.sh  run_demo.sh
scripts/qnx/: build_daemon.sh  build_grpc.sh  install_deps.sh
server_patches/: apply_remote_dspark.py  dspark_drafter.h  dspark_stats.h  remote_dspark_client.cpp  remote_dspark_impl.h
tests/: e2e_demo.sh  fake_drafter.py  test_gemma_dspark.sh  test_gemma_dspark_convert.py  test_proto.py
tools/llama-dspark-grpcd/: CMakeLists.txt  dspark_engine.cpp  dspark_engine.h  grpc_service.cpp  grpc_service.h  main.cpp  replay_mode.cpp  replay_mode.h  selftest.cpp  selftest.h  watch_renderer.cpp  watch_renderer.h
tools/llama-dspark-test-ui/: .gitignore  README.md  package-lock.json  package.json
tools/llama-dspark-test-ui/app/: layout.tsx  page.tsx
tools/llama-dspark-test-ui/app/api/chat/: route.ts
tools/llama-dspark-test-ui/app/api/config/: route.ts
tools/llama-dspark-test-ui/app/api/logs/: route.ts
tools/llama-dspark-test-ui/app/api/models/: route.ts
tools/llama-dspark-test-ui/app/api/process/: route.ts
tools/llama-dspark-test-ui/app/api/spec/: route.ts
tools/llama-dspark-test-ui/components/: providers.tsx
tools/llama-dspark-test-ui/components/ai-elements/: prompt-input.tsx
tools/llama-dspark-test-ui/components/dashboard/: chat-panel.tsx  control-panel.tsx  fields.tsx  header.tsx  launch-cards.tsx  live-sync.tsx  logs-panel.tsx  metrics-panel.tsx  stat-card.tsx  status-badge.tsx
tools/llama-dspark-test-ui/components/tremor/: area-chart.tsx
tools/llama-dspark-test-ui/lib/: config-store.ts  paths.ts  process-manager.ts  store.ts  types.ts
